Enhance README with design patterns and features
Updated README to include design patterns and features.